--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
-  "name": "pm2-syslog",
-  "version": "2.1.0",
-  "description": "Redirect PM2/apps logs to syslog",
-  "main": "probe.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "dependencies": {
-    "ain2": "^2.0.0",
-    "pm2": "latest"
-  },
-  "apps": [
-    {
-      "name": "pm2-syslog",
-      "script": "app.js"
-    }
-  ],
-  "author": "Alexandre Strzelewicz",
-  "license": "MIT"
+	"name": "pm2-syslog",
+	"version": "2.1.0",
+	"description": "Redirect PM2/apps logs to syslog",
+	"main": "probe.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"dependencies": {
+		"ain2": "^2.0.0",
+		"pmx": "latest"
+	},
+	"apps": [
+		{
+			"name": "pm2-syslog",
+			"script": "app.js"
+		}
+	],
+	"config": {             
+		"tag": "pm2",
+		"facility": "syslog",
+		"hostname": "localhost"
+	},
+	"author": "Alexandre Strzelewicz",
+	"license": "MIT"
 }
